# s2-sdk-python-old

./: CHANGELOG.md  README.md  pyproject.toml  pytest.ini  update_specs
.github/workflows/: ci.yml  release.yml
docs/source/: api-reference.md  conf.py
examples/: append_session.py  append_session_with_auto_batching.py  producer.py  read_session.py
src/s2_sdk/: __init__.py  _append_session.py  _batching.py  _client.py  _compression.py  _exceptions.py  _frame_signal.py  _mappers.py  _ops.py  _producer.py  _retrier.py  _types.py  _validators.py
src/s2_sdk/_generated/s2/v1/: s2_pb2.py  s2_pb2.pyi
src/s2_sdk/_s2s/: __init__.py  _append_session.py  _protocol.py  _read_session.py
src/streamstore/: __init__.py
tests/: conftest.py  test_account_ops.py  test_basin_ops.py  test_batching.py  test_client.py  test_compression.py  test_metrics_ops.py  test_producer.py  test_retry.py  test_s2s_protocol.py  test_session.py  test_stream_ops.py  test_validators.py
