[project]
name = "s2-sdk"
version = "0.1.0"
description = "Python SDK for s2.dev"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "h2>=4.1.0",
    "protobuf>=5.29.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.69.0",
    "mypy>=1.14.1",
    "poethepoet>=0.36.0",
    "ruff>=0.9.1",
    "types-protobuf>=5.29.1.20241207",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]
docs = [
    "enum-tools[sphinx]>=0.12.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-autobuild>=2024.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s2_sdk"]

[tool.mypy]
files = ["src/s2_sdk/", "tests/"]
exclude = ["src/s2_sdk/_generated/"]
check_untyped_defs = true

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "dist",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.poe.tasks]
linter = "uv run ruff check --fix"
formatter = "uv run ruff format"
type_checker = "uv run mypy"
ci_linter = "uv run ruff check"
ci_formatter = "uv run ruff format --check"
checker = ["linter", "formatter", "type_checker"]
ci_checker = ["ci_linter", "ci_formatter", "type_checker"]
docs_check = "uv run --group docs sphinx-build -W -b html docs/source docs/build/html"
docs_clean = "rm -rf docs/build"
docs_live.sequence = ["docs_clean", "docs_check", {cmd = "uv run --group docs sphinx-autobuild docs/source docs/build/html --watch src/s2_sdk"}]
e2e_tests = "uv run pytest tests/ -v -s -m 'account or basin or stream'"
e2e_account_tests = "uv run pytest tests/ -v -s -m account"
e2e_basin_tests = "uv run pytest tests/ -v -s -m basin"
e2e_stream_tests = "uv run pytest tests/ -v -s -m stream"
