[project]
name = "streamstore"
version = "5.0.1"
description = "[DEPRECATED] migrate to s2-sdk"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 7 - Inactive",
]
dependencies = [
    "grpcio-tools>=1.69.0",
    "grpcio>=1.69.0",
    "types-protobuf>=5.29.1.20241207",
    "grpc-stubs>=1.53.0.5",
    "anyio>=4.8.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "poethepoet>=0.36.0", "ruff>=0.9.1"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",
]
docs = [
    "enum-tools[sphinx]>=0.12.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src/", "tests/", "examples/"]

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "dist",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.poe.tasks]
linter = "uv run ruff check --fix"
formatter = "uv run ruff format"
type_checker = "uv run mypy"
ci_linter = "uv run ruff check"
ci_formatter = "uv run ruff format --check"
checker = ["linter", "formatter", "type_checker"]
ci_checker = ["ci_linter", "ci_formatter", "type_checker"]
e2e_tests = "uv run pytest tests/ -v -s"
e2e_account_tests = "uv run pytest tests/ -v -s -m account"
e2e_basin_tests = "uv run pytest tests/ -v -s -m basin"
e2e_stream_tests = "uv run pytest tests/ -v -s -m stream"
